--- a/dexcandles-v2.template.yaml
+++ b/dexcandles-v2.template.yaml
@@ -21,15 +21,15 @@ dataSources:
         - Token
       abis:
         - name: LBFactory
-          file: ../abis/LBFactory.json
+          file: ./abis/LBFactory.json
         - name: LBPair
-          file: ../abis/LBPair.json
+          file: ./abis/LBPair.json
         - name: ERC20SymbolBytes
-          file: ../abis/ERC20SymbolBytes.json
+          file: ./abis/ERC20SymbolBytes.json
         - name: ERC20NameBytes
-          file: ../abis/ERC20NameBytes.json
+          file: ./abis/ERC20NameBytes.json
         - name: ERC20DecimalBytes
-          file: ../abis/ERC20DecimaleBytes.json
+          file: ./abis/ERC20DecimaleBytes.json
       eventHandlers:
         - event: LBPairCreated(indexed address,indexed address,indexed uint256,address,uint256)
           handler: handleLBPairCreated
@@ -51,13 +51,13 @@ dataSources:
         - Token
       abis:
         - name: LBPair
-          file: ../abis/LBPair.json
+          file: ./abis/LBPair.json
         - name: ERC20SymbolBytes
-          file: ../abis/ERC20SymbolBytes.json
+          file: ./abis/ERC20SymbolBytes.json
         - name: ERC20NameBytes
-          file: ../abis/ERC20NameBytes.json
+          file: ./abis/ERC20NameBytes.json
         - name: ERC20DecimalBytes
-          file: ../abis/ERC20DecimaleBytes.json
+          file: ./abis/ERC20DecimaleBytes.json
       eventHandlers:
         - event: Swap(indexed address,indexed address,indexed uint24,uint256,uint256,uint256,uint256,uint256,uint256,uint256)
           handler: handleSwapV2
@@ -79,15 +79,15 @@ dataSources:
         - Pair
       abis:
         - name: Factory
-          file: ../abis/JoeFactory.json
+          file: ./abis/JoeFactory.json
         - name: Pair
-          file: ../abis/JoePair.json
+          file: ./abis/JoePair.json
         - name: ERC20SymbolBytes
-          file: ../abis/ERC20SymbolBytes.json
+          file: ./abis/ERC20SymbolBytes.json
         - name: ERC20NameBytes
-          file: ../abis/ERC20NameBytes.json
+          file: ./abis/ERC20NameBytes.json
         - name: ERC20DecimalBytes
-          file: ../abis/ERC20DecimaleBytes.json
+          file: ./abis/ERC20DecimaleBytes.json
       eventHandlers:
         - event: PairCreated(indexed address,indexed address,address,uint256)
           handler: handleV1PairCreated
@@ -109,13 +109,13 @@ dataSources:
         - Token
       abis:
         - name: Pair
-          file: ../abis/JoePair.json
+          file: ./abis/JoePair.json
         - name: ERC20SymbolBytes
-          file: ../abis/ERC20SymbolBytes.json
+          file: ./abis/ERC20SymbolBytes.json
         - name: ERC20NameBytes
-          file: ../abis/ERC20NameBytes.json
+          file: ./abis/ERC20NameBytes.json
         - name: ERC20DecimalBytes
-          file: ../abis/ERC20DecimaleBytes.json
+          file: ./abis/ERC20DecimaleBytes.json
       eventHandlers:
         - event: Swap(indexed address,uint256,uint256,uint256,uint256,indexed address)
           handler: handleSwapV1
