--- a/dexcandles-v2.template.yaml
+++ b/dexcandles-v2.template.yaml
@@ -24,12 +24,12 @@ dataSources:
           file: ./abis/LBFactory.json
         - name: LBPair
           file: ./abis/LBPair.json
+        - name: ERC20
+          file: ./abis/ERC20.json
         - name: ERC20SymbolBytes
           file: ./abis/ERC20SymbolBytes.json
         - name: ERC20NameBytes
           file: ./abis/ERC20NameBytes.json
-        - name: ERC20DecimalBytes
-          file: ./abis/ERC20DecimalBytes.json
       eventHandlers:
         - event: LBPairCreated(indexed address,indexed address,indexed uint256,address,uint256)
           handler: handleLBPairCreated
@@ -52,12 +52,12 @@ dataSources:
       abis:
         - name: LBPair
           file: ./abis/LBPair.json
+        - name: ERC20
+          file: ./abis/ERC20.json
         - name: ERC20SymbolBytes
           file: ./abis/ERC20SymbolBytes.json
         - name: ERC20NameBytes
           file: ./abis/ERC20NameBytes.json
-        - name: ERC20DecimalBytes
-          file: ./abis/ERC20DecimalBytes.json
       eventHandlers:
         - event: Swap(indexed address,indexed address,indexed uint24,uint256,uint256,uint256,uint256,uint256,uint256,uint256)
           handler: handleSwapV2
@@ -82,12 +82,12 @@ dataSources:
           file: ./abis/JoeFactory.json
         - name: Pair
           file: ./abis/JoePair.json
+        - name: ERC20
+          file: ./abis/ERC20.json
         - name: ERC20SymbolBytes
           file: ./abis/ERC20SymbolBytes.json
         - name: ERC20NameBytes
           file: ./abis/ERC20NameBytes.json
-        - name: ERC20DecimalBytes
-          file: ./abis/ERC20DecimalBytes.json
       eventHandlers:
         - event: PairCreated(indexed address,indexed address,address,uint256)
           handler: handleV1PairCreated
@@ -110,12 +110,12 @@ dataSources:
       abis:
         - name: Pair
           file: ./abis/JoePair.json
+        - name: ERC20
+          file: ./abis/ERC20.json
         - name: ERC20SymbolBytes
           file: ./abis/ERC20SymbolBytes.json
         - name: ERC20NameBytes
           file: ./abis/ERC20NameBytes.json
-        - name: ERC20DecimalBytes
-          file: ./abis/ERC20DecimalBytes.json
       eventHandlers:
         - event: Swap(indexed address,uint256,uint256,uint256,uint256,indexed address)
           handler: handleSwapV1
