set up mustache and scripts for arbitrum

--- a/package.json
+++ b/package.json
@@ -2,18 +2,22 @@
   "name": "dex-candles-v2-fuji",
   "version": "2.0.0",
   "scripts": {
-    "prepare:avax": "mustache config/avax.json dexcandles-v2.template.yaml > dexcandles-v2.avax.yaml",
-    "prepare:fuji": "mustache config/fuji.json dexcandles-v2.template.yaml > dexcandles-v2.fuji.yaml",
-    "prepare:arbgoerli": "mustache config/arbgoerli.json dexcandles-v2.template.yaml > dexcandles-v2.arbgoerli.yaml",
+    "prepare:avax": "mustache config/avax.json dexcandles-v2.template.yaml > dexcandles-v2.avax.yaml && mustache config/avax.json src/constants/index.template.ts > src/constants/index.ts",
+    "prepare:fuji": "mustache config/fuji.json dexcandles-v2.template.yaml > dexcandles-v2.fuji.yaml && mustache config/fuji.json src/constants/index.template.ts > src/constants/index.ts",
+    "prepare:arbgoerli": "mustache config/arbgoerli.json dexcandles-v2.template.yaml > dexcandles-v2.arbgoerli.yaml && mustache config/arbgoerli.json src/constants/index.template.ts > src/constants/index.ts",
+    "prepare:arbitrum": "mustache config/arbitrum.json dexcandles-v2.template.yaml > dexcandles-v2.arbitrum.yaml && mustache config/arbitrum.json src/constants/index.template.ts > src/constants/index.ts",
     "codegen:avax": "graph codegen dexcandles-v2.avax.yaml",
     "codegen:fuji": "graph codegen dexcandles-v2.fuji.yaml",
     "codegen:arbgoerli": "graph codegen dexcandles-v2.arbgoerli.yaml",
+    "codegen:arbitrum": "graph codegen dexcandles-v2.arbitrum.yaml",
     "build:avax": "graph build dexcandles-v2.avax.yaml",
     "build:fuji": "graph build dexcandles-v2.fuji.yaml",
     "build:arbgoerli": "graph build dexcandles-v2.arbgoerli.yaml",
+    "build:arbitrum": "graph build dexcandles-v2.arbitrum.yaml",
     "deploy:avax": "graph deploy --node https://api.thegraph.com/deploy/ traderjoe-xyz/dex-candles-v2 dexcandles-v2.avax.yaml",
     "deploy:fuji": "graph deploy --node https://api.thegraph.com/deploy/ traderjoe-xyz/dex-candles-v2-fuji dexcandles-v2.fuji.yaml",
     "deploy:arbgoerli": "graph deploy --node https://api.thegraph.com/deploy/ traderjoe-xyz/dexcandles-v2-arb-goerli dexcandles-v2.arbgoerli.yaml",
+    "deploy:arbitrum": "graph deploy --node https://api.thegraph.com/deploy/ traderjoe-xyz/dexcandles-v2-arbitrum dexcandles-v2.arbitrum.yaml",
     "create-local": "graph create --node http://localhost:8020/ traderjoe-xyz/dex-candles-v2-fuji",
     "remove-local": "graph remove --node http://localhost:8020/ traderjoe-xyz/dex-candles-v2-fuji",
     "deploy-local": "graph deploy --node http://localhost:8020/ --ipfs http://localhost:5001 traderjoe-xyz/dex-candles-v2-fuji"
